# test

./: .flake8  .gitignore  ARCHITECTURE.md  AUDIO_TOOLS_IMPLEMENTATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLAUDE_API_INTEGRATION_ANALYSIS.md  CLAUDE_CODE_GUIDE.md  CLAUDE_CODE_REDESIGN.md  FINAL_SUMMARY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_REPORT_PHASE0_PHASE1.md  INSTALL.md  MV_GENERATOR_README.md  Makefile  OPTIMIZATION_TOOLS_IMPLEMENTATION_REPORT.md  PHASE2_PHASE3_IMPLEMENTATION_REPORT.md  PHASE4_PHASE5_IMPLEMENTATION_REPORT.md  PHASE4_PHASE5_QUICKSTART.md  PHASE_0-4_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START_REAL_AI.md  README.md  README_MVORCH.md  README_PHASE5_9.md  REDESIGN_SUMMARY.md  VALIDATION_TOOLS_REPORT.md  WAVE4_FINAL_IMPLEMENTATION_REPORT.md  ai_integration.py  config.json  example_usage.py  generate_test_audio.py  mv_shot_generator.py  pyproject.toml  requirements.txt  run_all_phases.py  run_orchestrator.py  run_phase5_9.py  sample_analysis.json  (+3 more)
.claude/prompts/: phase1_award_winner.md  phase1_corporate.md  phase1_evaluation.md  phase1_freelancer.md  phase1_newcomer.md  phase1_veteran.md  phase2_award_winner.md  phase2_corporate.md  phase2_evaluation.md  phase2_freelancer.md  phase2_newcomer.md  phase2_veteran.md  phase3_award_winner.md  phase3_corporate.md  phase3_evaluation.md  phase3_freelancer.md  (+12 more)
config/: orchestrator_config.json
core/: __init__.py  agent_executor.py  atomic_file.py  clip_evaluator.py  codex_runner.py  constants.py  director_profiles.py  effects_generator.py  evaluation_agent.py  feedback_loop_manager.py  mcp_client.py  mcp_clip_generator.py  mcp_selector.py  orchestrator_agent.py  pipeline_state.py  remotion_renderer.py  security.py  shared_state.py  shot_grammar.py  utils.py  video_editor.py
docs/: DESIGN_SPECIFICATION.md  DESIGN_SPECIFICATION_v2_PERFECT.md  file_based_workflow_architecture.md
examples/: INNOVATIVE_METHODS_VERIFIED.md  METHODS_COMPARISON.md  README_NEW_APPROACHES.md  complete_integration_example.py  declarative_workflow.py  error_handling_retry.py  example_analysis_only.py  example_basic.py  example_custom_directors.py  example_programmatic.py  innovative_approaches.py  message_history_persistence.py  method1_tool_result_in_user.py  method2_tool_result_as_system.py  verified_claude_p_runner.py
mv_orchestra/: .gitignore  PHASE0_IMPLEMENTATION.md  PHASE0_TEST_RESULTS.md  README.md  requirements.txt  test_placeholder.py
phase0/: README.md  __init__.py  runner.py  test_phase0.py
phase1/: README.md  __init__.py  runner.py  test_phase1.py
phase2/: README.md  __init__.py  runner.py  section_utils.py  test_phase2.py
phase3/: README.md  __init__.py  clip_utils.py  runner.py  test_phase3.py
phase4/: README.md  __init__.py  asset_manager.py  generation_modes.py  prompt_builder.py  runner.py  test_phase4.py
phase5/: README.md  __init__.py  api_client.py  runner.py  test_phase5.py
phase6/: README.md  __init__.py  runner.py
phase7/: README.md  __init__.py  runner.py
phase8/: README.md  __init__.py  runner.py
phase9/: README.md  __init__.py  runner.py
tools/: README.md  USAGE_EXAMPLES.md  __init__.py  audio_utils.py  build_analysis.py  build_src.py  demo_analysis.json  demo_lyrics.txt  demo_manual.py  demo_src.json  process_evaluation.py  test_build_analysis.py  test_build_src.py
(+64 files in other folders)
